# LLM_Mini_Series_Part_II

./: .gitignore  README.md  pyproject.toml  requirements.txt
multi_index_demo/: app.py  app_config.yaml  config.py  indexing_utils.py  paths.py  query_executers.py  response_clustering.py  streamlit_utils.py
multi_index_demo/esco_skill_graph/: esco_skill_extractor.py  esco_skill_graph.py  esco_skill_mapping.py  skill_list_prompt.txt
tests/: test_version.py
